Added data files

--- a/COMP123-S2019-FinalTestC/COMP123-S2019-FinalTestC.csproj
+++ b/COMP123-S2019-FinalTestC/COMP123-S2019-FinalTestC.csproj
@@ -77,6 +77,8 @@
     <Folder Include="Views\" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Data\firstNames.txt" />
+    <Content Include="Data\lastNames.txt" />
     <Content Include="Data\skills.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
