--- a/COMP123-S2019-FinalTestC/COMP123-S2019-FinalTestC.csproj
+++ b/COMP123-S2019-FinalTestC/COMP123-S2019-FinalTestC.csproj
@@ -51,6 +51,12 @@
     <Compile Include="Objects\Skill.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Views\AboutForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\AboutForm.Designer.cs">
+      <DependentUpon>AboutForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Views\CharacterGenerationForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -72,6 +78,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Views\AboutForm.resx">
+      <DependentUpon>AboutForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Views\CharacterGenerationForm.resx">
       <DependentUpon>CharacterGenerationForm.cs</DependentUpon>
     </EmbeddedResource>
